--- a/src/app/shots/shots.component.html
+++ b/src/app/shots/shots.component.html
@@ -33,9 +33,9 @@
           <span aria-hidden="true">&times;</span>
         </button>
 
-        <div class="row">
+        <div class="row" class="margin-top-30">
           <div class="col-lg-6 col-md-6">
-              <img src="{{ shotDetail.images.normal }}">
+            <img src="{{ shotDetail.images.normal }}" class="img">
           </div>
           
           <div class="col-lg-6 col-md-6">
