--- a/src/app/shots/shots.component.css
+++ b/src/app/shots/shots.component.css
@@ -6,3 +6,14 @@
     margin-top:-15px; 
     margin-bottom:20px;
 }
+
+@media screen and (max-width:1024px) {
+    .margin-top-30 {
+        margin-top:30px;
+    }
+
+    .img {
+        width:100%;
+    }
+    
+}
