--- a/src/app/shots/shots.component.html
+++ b/src/app/shots/shots.component.html
@@ -35,7 +35,7 @@
 
         <div class="row" class="margin-top-30">
           <div class="col-lg-6 col-md-6">
-            <img src="{{ shotDetail.images.normal }}" class="img">
+            <img src="{{ shotDetail.images.normal }}" class="img-responsive">
           </div>
           
           <div class="col-lg-6 col-md-6">
@@ -47,6 +47,7 @@
             <a title="Comments"><i class="fa fa-comments" aria-hidden="true"></i> <span class="badge hover">{{ shotDetail.comments_count }}</span></a>
           </div>
         </div>
+        <div style="clear:both;"></div>
       </div>
     </div>
   </div>
